project2_ws/log/build_2023-10-06_20-31-42/project2_tam/stderr.log
/usr/lib/python3/dist-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/samuel/ros2_humble/CSCE452-samuel.fafel/project2_ws/install/project2_tam/lib/python3.10/site-packages/project2_tam/project2.py", line 20
    			self.num_turtles = len(self.segments):
    			                                     ^
SyntaxError: invalid syntax

